Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4718

NULL pointer derefences in OSP

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0
    • Lustre 2.6.0
    • 3
    • 12968

      In osp_xattr_get() and osp_declare_xattr_set() there are NULL pointer deferences in the error handling cases.

      /root/lustre-release/lustre/osp/osp_object.c:749:9: warning: Access to field 'oxe_ready' results in a dereference of a null pointer (loaded from variable 'oxe')
                              oxe->oxe_ready = 0;
                              ~~~  ^
      /root/lustre-release/lustre/osp/osp_object.c:836:9: warning: Access to field 'oxe_ready' results in a dereference of a null pointer (loaded from variable 'oxe')
                              oxe->oxe_ready = 0;
                              ~~~  ^
      

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: